# skymap-overlap

./: .gitignore  .pre-commit-config.yaml  404.html  Cargo.toml  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  tests.yml
api/: index.html
benches/: rotation_pvalue.rs
docs/: index.md  requirements.txt
docs/api/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: method.md
examples/: bench_real.rs
getting-started/installation/: index.html
getting-started/quickstart/: index.html
search/: search_index.json
src/: error.rs  far.rs  lib.rs  overlap.rs  python.rs  rotation.rs  skymap.rs
tests/: integration.rs  test_python.py
tests/fixtures/: grb_skymap.fits  gw_skymap.fits
user-guide/method/: index.html
